KAlarm

=== Version 0.9.7 --- 21 Nov 2003 ===
Fix memory leak when sending emails with attachments.
Fix error sending emails with very small attachments.

=== Version 0.9.6 --- 2 Nov 2003 ===
Add option to choose foreground colour for alarm messages.
Create new alarm by dragging KMail email onto main window or system tray icon.
Set initial recurrence defaults to correspond to alarm start date.
Add option for how February 29th recurrences are handled in non-leap years.
Monthly/yearly recurrence edit: adhere to user preference for start day of week.
Eliminate multiple confirmation prompts when deleting multiple alarms.
Eliminate duplicate alarms in system tray tooltip.
Fix crash after reporting error opening calendar file.
Fix wrong status in system tray icon if KAlarm starts up with alarms disabled.
Fix wrong number of days in Time-to-alarm column in main window.
Fix omission of deferred alarms from system tray tooltip.

=== Version 0.9.5 --- 3 Sep 2003 ===
Add option for non-modal alarm message windows.
Add option to display a notification when an email alarm queues an email.
Emails via KMail are sent without opening composer window, if KMail is running.
Provide separate configuration for 'From' and 'Bcc' addresses for email alarms.
Add exceptions to recurrence specification.
Add multiple month selection to yearly recurrence.
Add day of month selection in yearly recurrence.
Add last day of month option in monthly and yearly recurrences.
Add 2nd - 5th last week of month options in monthly and yearly recurrences.
Add filename completion to file and command alarm edit fields.
Display alarms-disabled indication in system tray tooltip.
Enable file alarms to display image files.
Fix file alarms not dislaying some text files, and improve HTML file display.
Fix loss of edits of attachment list for email alarms.
Fix wrong recurrence end date being displayed when editing an existing alarm.

=== Version 0.9.4 --- 3 Jul 2003 ===